--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,22 @@ spring.r2dbc.pool.max-size=20
 spring.r2dbc.pool.max-idle-time=30m
 logging.level.org.springframework.r2dbc=DEBUG
 logging.level.io.r2dbc.postgresql=DEBUG
+
+
+
+
+# KAFKA CONFIGURATION
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=gmap-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+# Serializers (Object to JSON for sending)
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Deserializers (JSON to Object for receiving)
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+# Trust the package where LocationEvent resides so it can be deserialized
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.prohands.GMap.model
