--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,32 @@
+# === Spring Boot Application Config ===
 spring.application.name=GMap
-spring.r2dbc.url=r2dbc:postgresql://ep-divine-leaf-ah0nqlrp-pooler.c-3.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+server.port=8085
+# === R2DBC Reactive Postgres Config ===
+spring.r2dbc.url=r2dbc:postgresql://ep-tiny-credit-a4h6rkrb-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
 spring.r2dbc.username=neondb_owner
-spring.r2dbc.password=npg_AhILjVa50wRT
+spring.r2dbc.password=npg_nNYd9yHuPVX7
 spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-size=20
 spring.r2dbc.pool.max-idle-time=30m
+
+# === Logging ===
 logging.level.org.springframework.r2dbc=DEBUG
 logging.level.io.r2dbc.postgresql=DEBUG
+
+# === Flyway Migration ===
+spring.flyway.url=jdbc:postgresql://ep-tiny-credit-a4h6rkrb-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+spring.flyway.user=neondb_owner
+spring.flyway.password=npg_nNYd9yHuPVX7
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
 
 
 
 
 # KAFKA CONFIGURATION
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=gmap-group
 spring.kafka.consumer.auto-offset-reset=earliest
 
