--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 # === Spring Boot Application Config ===
 spring.application.name=GMap
 server.port=8085
-# === R2DBC Reactive Postgres Config ===
-spring.r2dbc.url=r2dbc:postgresql://ep-tiny-credit-a4h6rkrb-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+spring.r2dbc.url=r2dbc:postgresql://ep-polished-fog-a4xi3pom-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
 spring.r2dbc.username=neondb_owner
-spring.r2dbc.password=npg_nNYd9yHuPVX7
+spring.r2dbc.password=npg_ev9nJl5DBpOz
 spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-size=20
@@ -14,14 +13,13 @@ spring.r2dbc.pool.max-idle-time=30m
 logging.level.org.springframework.r2dbc=DEBUG
 logging.level.io.r2dbc.postgresql=DEBUG
 
-# === Flyway Migration ===
-spring.flyway.url=jdbc:postgresql://ep-tiny-credit-a4h6rkrb-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+# === Flyway Migration (JDBC) ===
+spring.flyway.url=jdbc:postgresql://ep-polished-fog-a4xi3pom-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
 spring.flyway.user=neondb_owner
-spring.flyway.password=npg_nNYd9yHuPVX7
+spring.flyway.password=npg_ev9nJl5DBpOz
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.enabled=true
-
+spring.flyway.enabled=false
 
 
 
